--- a/pencarian.html
+++ b/pencarian.html
@@ -30,7 +30,7 @@ body{
   <body>
 
     <!-- Navbar Menu -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light  fixed-top" style="background-color:white !important;">
       <div class="container">
       <a class="navbar-brand" href="#">
         <img src="gambar/logo.svg" alt="lokerlink logo" class="img-fluid">
@@ -79,7 +79,7 @@ body{
     <!-- End Navbar Menu -->
 
     <!-- jumbotron -->
-    <div class="jumbotron jumbotron-fluid d-flex align-items-center">
+    <div class="jumbotron jumbotron-fluid d-flex align-items-center" style="margin-top:90px;">
   <div class="container  ">
 <div class="d-flex justify-content-center align-items-center">
 <div class="background-form w-75 ">
