--- a/pencarian.html
+++ b/pencarian.html
@@ -94,7 +94,11 @@ body{
 <!-- End jumbotron -->
 
 <!-- filter & Job list search -->
-
+<div class="form-check">
+  <label class="form-check-label">
+    <input type="checkbox" class="form-check-input" value="">Saya menerima <a href="www.dot.com">Peraturan LokerLink</a>
+  </label>
+</div>
 <!-- filter jobs -->
 <div class="container">
   <div class="row">
